--- a/submissions/Homework-1/1.Popular-books.ipynb
+++ b/submissions/Homework-1/1.Popular-books.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d7a5f3341864a8062e61f4be5ab49c97919c30641ef742afdba176644088e601"
+  "signature": "sha256:d5fa35f30f7fcf0d9d87a970b2c1dc3bff61cdcfe620cb575a67af2dc4a52b4b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1296,6 +1296,9 @@
       "\n",
       "\n",
       "number = 0\n",
+      "# here we run the program for the first time which simply get us the page number we need to run\n",
+      "# for here 25/20 = 1, so we need to run two pages\n",
+      "# we don't request any service on our first run\n",
       "for name in iter(file1.splitlines()):\n",
       "    name = name.strip(\" \")\n",
       "    if not name.startswith(\"{\"):\n",
@@ -1304,7 +1307,10 @@
       "        if name[0].startswith(\"num_results\"):\n",
       "            number = str(name[1]).strip(\" \").strip(\",\")\n",
       "            print \"Number of books: \" + number + '\\n'\n",
-      "                \n",
+      "\n",
+      "# here is the second run\n",
+      "# we request service based on the page number\n",
+      "# here page number = 2, so we iterate the for-loop twice\n",
       "num = (int(number)/20) + 1\n",
       "for i in range(0, num):\n",
       "    index = 20 * i\n",
@@ -1504,13 +1510,19 @@
       "            The date on which the list was published.\n",
       "            \n",
       "    \"\"\"\n",
+      "    \n",
+      "    # here we get the right api address based on date, list_name and offset number\n",
       "    index = 0\n",
       "    api = \"http://api.nytimes.com/svc/books/v3/lists/\" + str(date) + \"/\" + list_name + \".json?offset=\" + str(index) + \"&api-key=\" + str(key)\n",
+      "    \n",
+      "    # capture information\n",
       "    response = requests.get(api)\n",
       "    dates = response.json()\n",
       "    number = dates['num_results']\n",
       "    l = []\n",
       "    \n",
+      "    # we do datamining here based on our captured information, \n",
+      "    # basically get information bases on checking dictionary\n",
       "    for i in dates['results']['books']:\n",
       "        l.append(i['title'])\n",
       "    if number > 20:\n",
@@ -1610,8 +1622,11 @@
       "    \"\"\"\n",
       "    books_dict={}\n",
       "    now = start_date\n",
+      "    \n",
+      "    # run the while loop when current date is before end date\n",
       "    while now <= end_date:\n",
       "        l, time = get_books(now, list_name)\n",
+      "        # check if the book is in our dictionary\n",
       "        for name in l:\n",
       "            if name not in books_dict:\n",
       "                books_dict[name] = 1\n",
@@ -1641,6 +1656,8 @@
       "list_name = \"hardcover-fiction\"\n",
       "\n",
       "books_dict = most_popular(start_date, end_date, list_name)\n",
+      "\n",
+      "# I modified the unit so singular and plural number of week is seperated\n",
       "for book in books_dict:\n",
       "    if books_dict[book] == 1:\n",
       "        unit = 'week'\n",
