--- a/submissions/Homework-4/4.Food-recipes.ipynb
+++ b/submissions/Homework-4/4.Food-recipes.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "# representing the data\n",
+    "# parsing and representing the data\n",
     "# Hypothesis: recipes from the same continent(Asia, Africa, America, Europe) are similar\n",
     "\n",
     "map = open(\"scirep-cuisines-detail/map.txt\",\"r\")\n",
@@ -308,7 +308,7 @@
        "nG4GAGAiJAIAMBESAQCYCIkAAEyERAAAJv8/U4vXLmXsTXIAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x106006a10>"
+       "<matplotlib.figure.Figure at 0x10600fe10>"
       ]
      },
      "metadata": {},
@@ -351,16 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['African', 'American', 'Asian', 'Austria', 'Bangladesh', 'Belgium', 'Cajun_Creole', 'Canada', 'Caribbean', 'Central_SouthAmerican', 'China', 'Chinese', 'East-African', 'Eastern-Europe', 'EasternEuropean_Russian', 'English_Scottish', 'France', 'French', 'German', 'Germany', 'Greek', 'India', 'Indian', 'Indonesia', 'Iran', 'Irish', 'Israel', 'Italian', 'Italy', 'Japan', 'Japanese', 'Jewish', 'Korea', 'Lebanon', 'Malaysia', 'Mediterranean', 'Mexican', 'Mexico', 'MiddleEastern', 'Moroccan', 'Netherlands', 'North-African', 'Pakistan', 'Philippines', 'Portugal', 'Scandinavia', 'Scandinavian', 'South-African', 'South-America', 'Southern_SoulFood', 'Southwestern', 'Spain', 'Spanish_Portuguese', 'Switzerland', 'Thai', 'Thailand', 'Turkey', 'UK-and-Ireland', 'Vietnam', 'Vietnamese', 'West-African', 'asian', 'chinese', 'east_asian', 'italian', 'japanese', 'korean', 'mexico', 'western']\n"
+      "['African', 'American', 'Asian', 'Austria', 'Bangladesh', 'Belgium', 'Cajun_Creole', 'Canada', 'Caribbean', 'Central_SouthAmerican', 'China', 'Chinese', 'East-African', 'Eastern-Europe', 'EasternEuropean_Russian', 'English_Scottish', 'France', 'French', 'German', 'Germany', 'Greek', 'India', 'Indian', 'Indonesia', 'Iran', 'Irish', 'Israel', 'Italian', 'Italy', 'Japan', 'Japanese', 'Jewish', 'Korea', 'Lebanon', 'Malaysia', 'Mediterranean', 'Mexican', 'Mexico', 'MiddleEastern', 'Moroccan', 'Netherlands', 'North-African', 'Pakistan', 'Philippines', 'Portugal', 'Scandinavia', 'Scandinavian', 'South-African', 'South-America', 'Southern_SoulFood', 'Southwestern', 'Spain', 'Spanish_Portuguese', 'Switzerland', 'Thai', 'Thailand', 'Turkey', 'UK-and-Ireland', 'Vietnam', 'Vietnamese', 'West-African', 'asian', 'chinese', 'east_asian', 'italian', 'japanese', 'korean', 'mexico', 'western']\n",
+      "Chinese Thai Thailand\n",
+      "Cajun_Creole Caribbean Southwestern Mexican\n",
+      "China chinese Japanese Japan japanese\n"
      ]
     },
     {
@@ -704,7 +708,7 @@
        "RU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10a388150>"
+       "<matplotlib.figure.Figure at 0x109bd1ed0>"
       ]
      },
      "metadata": {},
@@ -734,7 +738,10 @@
     "# the country list are related with the x-values in the denmograph\n",
     "# the x value represents the index of country in the list, for example 1 represents Africa\n",
     "# the following print line prints the country list\n",
-    "print scountries"
+    "print scountries\n",
+    "print scountries[11], scountries[54], scountries[55]\n",
+    "print scountries[6], scountries[8], scountries[50], scountries[36]\n",
+    "print scountries[10], scountries[62], scountries[30], scountries[29], scountries[65]"
    ]
   },
   {
@@ -742,7 +749,13 @@
    "metadata": {},
    "source": [
     "### References\n",
-    "print scountries[11], scountries[54], scountries[55]"
+    "My hypothesis was \"recipes from the same continent are similiar\". I used the euclidean distance to calculate the similarity and did the clustering.\n",
+    "My clustering result is shown in the above graph. Since some cluster's size is really large, I picked up some small-sized clusters to see if my hypothesis holds.\n",
+    "I picked the yellow cluster and the right part of the green cluster as two samples.\n",
+    "Countries in the yellow cluster are Chinese, Thai and Thailand, pretty much the same part in Asia.\n",
+    "Countries in the right part of green cluster are Cajun_Creole, Caribbean, Southwestern and Mexican, these are all south-western countries.\n",
+    "If we look into larger size clusters, we will find that the purple cluster are almost all Asian countries(which further clustered into east-asian, north-asian, etc), and the green cluster are all South-Western countries. So countries that are nearby has high posssibility to be clustered into the same cluster, which shows that nearby countries shares great similarity in their recipes.\n",
+    "Hence to sum up, my hypothesis holds, that recipes from the same continent part are similiar."
    ]
   },
   {
