--- a/submissions/Homework-4/4.Food-recipes.ipynb
+++ b/submissions/Homework-4/4.Food-recipes.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
        "<Container object of 4 artists>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -308,7 +308,7 @@
        "nG4GAGAiJAIAMBESAQCYCIkAAEyERAAAJv8/U4vXLmXsTXIAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10600fe10>"
+       "<matplotlib.figure.Figure at 0x105ff45d0>"
       ]
      },
      "metadata": {},
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -708,7 +708,7 @@
        "RU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x109bd1ed0>"
+       "<matplotlib.figure.Figure at 0x107ee0dd0>"
       ]
      },
      "metadata": {},
@@ -739,6 +739,8 @@
     "# the x value represents the index of country in the list, for example 1 represents Africa\n",
     "# the following print line prints the country list\n",
     "print scountries\n",
+    "\n",
+    "# following lines are for testing which prints out countries in three small clusters\n",
     "print scountries[11], scountries[54], scountries[55]\n",
     "print scountries[6], scountries[8], scountries[50], scountries[36]\n",
     "print scountries[10], scountries[62], scountries[30], scountries[29], scountries[65]"
@@ -767,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -884,7 +886,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
